--- a/Examples/Objective-C/Base.lproj/Main.storyboard
+++ b/Examples/Objective-C/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zG1-ke-aR2">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zG1-ke-aR2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,14 +14,11 @@
         <scene sceneID="LFY-5w-ZIf">
             <objects>
                 <viewController id="zG1-ke-aR2" customClass="MXExampleViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="HZM-DV-Ucf"/>
-                        <viewControllerLayoutGuide type="bottom" id="Vaf-gD-4Wx"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="UJx-mF-scs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="lWk-Gx-2P8"/>
                     </view>
                     <connections>
                         <segue destination="ewC-LR-FGs" kind="custom" identifier="mx_page_0" customClass="MXPageSegue" id="KIb-7p-mdU"/>
@@ -57,6 +55,7 @@
                         <constraint firstAttribute="bottom" secondItem="1Px-wf-ykx" secondAttribute="bottom" id="ldr-DJ-I5J"/>
                         <constraint firstAttribute="trailing" secondItem="1Px-wf-ykx" secondAttribute="trailing" id="nwd-pF-VJd"/>
                     </constraints>
+                    <viewLayoutGuide key="safeArea" id="Mkb-Zm-O2R"/>
                 </view>
             </objects>
             <point key="canvasLocation" x="1148" y="1236"/>
@@ -65,10 +64,6 @@
         <scene sceneID="OJz-Zf-mOq">
             <objects>
                 <viewController id="WSd-B9-XCE" customClass="MXNumberViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bPj-ne-KVF"/>
-                        <viewControllerLayoutGuide type="bottom" id="LAl-If-Uof"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nph-wr-RcU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -83,8 +78,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="8eW-gp-g0p" firstAttribute="centerY" secondItem="nph-wr-RcU" secondAttribute="centerY" id="Dxd-EN-OTJ"/>
-                            <constraint firstItem="8eW-gp-g0p" firstAttribute="centerX" secondItem="nph-wr-RcU" secondAttribute="centerX" id="vAB-bF-az7"/>
+                            <constraint firstItem="8eW-gp-g0p" firstAttribute="centerX" secondItem="hcX-wF-7fU" secondAttribute="centerX" id="vAB-bF-az7"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="hcX-wF-7fU"/>
                     </view>
                     <connections>
                         <outlet property="numberLabel" destination="8eW-gp-g0p" id="Nvh-x8-egI"/>
@@ -98,14 +94,11 @@
         <scene sceneID="c4r-nS-dpp">
             <objects>
                 <viewController id="dur-4W-NuB" customClass="MXParallaxViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="d9e-cR-Cjb"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ybh-ey-cJL"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SgR-Kn-0aL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="8Jo-e1-Bjj"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ypX-js-jYN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -116,14 +109,11 @@
         <scene sceneID="bnl-dw-f8E">
             <objects>
                 <viewController id="ewC-LR-FGs" customClass="MXSimpleViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="GoG-K0-fgo"/>
-                        <viewControllerLayoutGuide type="bottom" id="ptL-ag-Za4"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="W7w-yn-LnW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Ig4-Aa-lGZ"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hJi-ER-Ill" userLabel="First Responder" sceneMemberID="firstResponder"/>
