--- a/Examples/Swift/Base.lproj/Main.storyboard
+++ b/Examples/Swift/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,14 +14,11 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MXViewController" customModule="MXSegmentedPager_swift" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="wEv-fe-vJm"/>
                     </view>
                     <connections>
                         <outlet property="headerView" destination="PlA-qW-Jwx" id="EPI-zc-Ee8"/>
@@ -45,6 +43,7 @@
                         <constraint firstAttribute="trailing" secondItem="R7a-6z-Ux4" secondAttribute="trailing" id="qSX-wV-eog"/>
                         <constraint firstItem="R7a-6z-Ux4" firstAttribute="leading" secondItem="PlA-qW-Jwx" secondAttribute="leading" id="zJM-1E-eNX"/>
                     </constraints>
+                    <viewLayoutGuide key="safeArea" id="3m6-Rz-X3K"/>
                 </view>
             </objects>
             <point key="canvasLocation" x="414" y="355"/>
@@ -62,11 +61,11 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="it1-PB-9DT" id="0eW-Ek-tIH">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xy8-Kz-YmY">
-                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -90,29 +89,30 @@
         <scene sceneID="946-L9-vyE">
             <objects>
                 <viewController id="X9u-4R-kMx" customClass="MXWebViewController" customModule="MXSegmentedPager_swift" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BXh-yd-IWv"/>
-                        <viewControllerLayoutGuide type="bottom" id="DX3-QN-gAz"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="LEY-g5-Tb0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ham-IO-iPo">
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GHi-BE-r6B">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Ham-IO-iPo" secondAttribute="trailing" id="Za5-cE-CTX"/>
-                            <constraint firstItem="Ham-IO-iPo" firstAttribute="top" secondItem="LEY-g5-Tb0" secondAttribute="top" id="pEv-JU-51t"/>
-                            <constraint firstItem="Ham-IO-iPo" firstAttribute="bottom" secondItem="DX3-QN-gAz" secondAttribute="top" id="pV3-D3-TyR"/>
-                            <constraint firstItem="Ham-IO-iPo" firstAttribute="leading" secondItem="LEY-g5-Tb0" secondAttribute="leading" id="xX3-CZ-cqo"/>
+                            <constraint firstItem="TPG-5c-ZEP" firstAttribute="trailing" secondItem="GHi-BE-r6B" secondAttribute="trailing" id="9hB-eC-apx"/>
+                            <constraint firstItem="GHi-BE-r6B" firstAttribute="top" secondItem="LEY-g5-Tb0" secondAttribute="top" id="SR7-tf-paT"/>
+                            <constraint firstItem="GHi-BE-r6B" firstAttribute="leading" secondItem="TPG-5c-ZEP" secondAttribute="leading" id="cTT-rw-bPi"/>
+                            <constraint firstItem="TPG-5c-ZEP" firstAttribute="bottom" secondItem="GHi-BE-r6B" secondAttribute="bottom" id="uUK-Un-do3"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="TPG-5c-ZEP"/>
                     </view>
                     <connections>
-                        <outlet property="webView" destination="Ham-IO-iPo" id="enN-bh-MwT"/>
+                        <outlet property="webView" destination="GHi-BE-r6B" id="iRM-uM-end"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wp9-4Z-AfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -123,10 +123,6 @@
         <scene sceneID="Pcu-Fr-2pE">
             <objects>
                 <viewController id="fPn-nM-wbd" customClass="MXTextViewController" customModule="MXSegmentedPager_swift" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="wiA-aa-dF4"/>
-                        <viewControllerLayoutGuide type="bottom" id="QiU-RV-hSa"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Eg2-t2-37B">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -139,11 +135,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="RpS-sn-Qqw" firstAttribute="bottom" secondItem="QiU-RV-hSa" secondAttribute="top" id="R02-jL-PUB"/>
-                            <constraint firstItem="RpS-sn-Qqw" firstAttribute="leading" secondItem="Eg2-t2-37B" secondAttribute="leading" id="j1I-mF-QEc"/>
-                            <constraint firstAttribute="trailing" secondItem="RpS-sn-Qqw" secondAttribute="trailing" id="krq-kS-ezJ"/>
+                            <constraint firstItem="RpS-sn-Qqw" firstAttribute="bottom" secondItem="iPl-wW-RFk" secondAttribute="bottom" id="R02-jL-PUB"/>
+                            <constraint firstItem="RpS-sn-Qqw" firstAttribute="leading" secondItem="iPl-wW-RFk" secondAttribute="leading" id="j1I-mF-QEc"/>
+                            <constraint firstItem="iPl-wW-RFk" firstAttribute="trailing" secondItem="RpS-sn-Qqw" secondAttribute="trailing" id="krq-kS-ezJ"/>
                             <constraint firstItem="RpS-sn-Qqw" firstAttribute="top" secondItem="Eg2-t2-37B" secondAttribute="top" id="xwe-he-qC3"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="iPl-wW-RFk"/>
                     </view>
                     <connections>
                         <outlet property="textView" destination="RpS-sn-Qqw" id="Jzu-pS-gXq"/>
